--- a/app/src/main/res/layout/activity_algebra1.xml
+++ b/app/src/main/res/layout/activity_algebra1.xml
@@ -1,70 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.thait.mathetistics.Algebra1"
-    android:background="@color/green">
+    android:orientation="vertical"
+    android:background="#2196F3">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Algebra 1"
-        android:id="@+id/title"
-        android:textColor="@color/red"
-        android:textSize="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="15dp"
+        android:background="#A4A4A4">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="Algebra 1"
+            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/title"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/white">
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="50dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Linear equation"
             android:id="@+id/lequation"
-            android:textSize="30dp"
+            android:textSize="25sp"
             android:textColor="@color/blue"
             android:onClick="linear"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Slope"
             android:id="@+id/slope"
-            android:textSize="30dp"
+            android:textSize="25sp"
             android:textColor="@color/blue"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Factoring"
             android:id="@+id/textView4"
-            android:textSize="30dp"
+            android:textSize="25sp"
             android:textColor="@color/blue"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Distribution/FOIL"
+            android:text="Practice Questions"
             android:id="@+id/foil"
-            android:textSize="30dp"
+            android:textSize="25sp"
             android:textColor="@color/blue"/>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
