--- a/app/src/main/res/layout/activity_scored.xml
+++ b/app/src/main/res/layout/activity_scored.xml
@@ -64,6 +64,6 @@
         android:layout_alignParentEnd="true"
         android:textColor="@color/blue"
         android:textSize="20dp"
-        android:onClick="done"/>
+        android:onClick="finishClicked"/>
 
 </RelativeLayout>
