Learning views updated

--- a/app/src/main/res/layout/activity_topic_selection.xml
+++ b/app/src/main/res/layout/activity_topic_selection.xml
@@ -82,8 +82,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="80dp"
-        android:text="Exercises"
-        android:id="@+id/exercise"
+        android:text="Main Menu"
+        android:onClick="toMainMenu"
         android:textColor="@color/blue"
         android:textSize="30sp"
         android:layout_below="@+id/button4"
