--- a/app/src/main/res/layout/activity_topic_selection.xml
+++ b/app/src/main/res/layout/activity_topic_selection.xml
@@ -36,7 +36,9 @@
         android:layout_below="@+id/header"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:onClick="toAlgebra1"/>
+        android:onClick="toAlgebra1"
+        android:background="@drawable/round2"/>
+
 
     <Button
         android:layout_width="match_parent"
@@ -49,7 +51,8 @@
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:onClick="toGeometry"/>
+        android:onClick="toGeometry"
+        android:background="@drawable/round2"/>
 
     <Button
         android:layout_width="match_parent"
@@ -62,7 +65,8 @@
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:onClick="toAlgebra2"/>
+        android:onClick="toAlgebra2"
+        android:background="@drawable/round2"/>
 
     <Button
         android:layout_width="match_parent"
@@ -75,7 +79,8 @@
         android:layout_below="@+id/button3"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:onClick="toCalculus"/>
+        android:onClick="toCalculus"
+        android:background="@drawable/round2"/>
 
 
     <Button
@@ -88,5 +93,6 @@
         android:textSize="30sp"
         android:layout_below="@+id/button4"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="25dp"
+        android:background="@drawable/round2"/>
 </RelativeLayout>
